--- a/style.css
+++ b/style.css
@@ -13,19 +13,17 @@ p {
 body {
     background: #0b2e50;
   text-align: center;
-    alignment: center;
 }
 
-.click {
+button{
     width: 220px;
     height: 50px;
-    border: none;
-    outline: none;
     color: #f8f8f8;
     background: rgba(6, 100, 213, 0.73);
     border-radius: 15px;
     display: block;
-    text-align: center;
+    align-self: center;
+    margin: 0 auto;
+
 
 }
-
