--- a/style/styleBerufe.css
+++ b/style/styleBerufe.css
@@ -1,4 +1,11 @@
 
+
+.maincontainer {
+    width:1100px;
+    margin:auto auto;
+    height:650px;
+
+}
 h1 {
     text-align: center;
     color: white;
@@ -8,9 +15,39 @@ h1 {
 
 body {
     background: #0b2e50;
-    text-align: center;
-    alignment: center;
+
 }
 
 
+.bilder13{
 
+
+}
+
+.bilder45{
+    width:800px;
+    margin:auto auto;
+    margin-top:30px;
+}
+
+.captionBild1{
+    text-align:center;
+    color:white;
+display:inline-block;
+    width:350px;
+
+}
+
+.captionBild2{
+    color:white;
+    display:inline-block;
+    width:350px;
+    text-align:center;
+}
+
+.captionBild3{
+    color:white;
+    display:inline-block;
+    width:350px;
+    text-align:center;
+}
