--- a/style/styleMuster.css
+++ b/style/styleMuster.css
@@ -15,3 +15,16 @@ body {
     text-align: center;
     alignment: center;
 }
+
+.click {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #f8f8f8;
+    background: rgba(6, 100, 213, 0.73);
+    border-radius: 15px;
+    display: block;
+    position: center;
+    margin-bottom: 50px;
+}
