--- a/style/styleGesundheit.css
+++ b/style/styleGesundheit.css
@@ -7,12 +7,17 @@ h1 {
     color: white;
 }
 
+h2 {
+    text-align: center;
+    color: white;
+}
+
 p {
     text-align: justify;
     color: white;
     margin-left: 140px;
     margin-right: 140px;
-    font-size: 25px;
+    font-size: 20px;
 
 }
 
@@ -20,5 +25,10 @@ a {
     text-align: justify;
     color: white;
     margin-left: 140px;
+    font-size: 22px;
 
+}
+
+.bild300{
+    position: center;
 }
