--- a/style/styleFreiwilligedienste.css
+++ b/style/styleFreiwilligedienste.css
@@ -11,16 +11,17 @@ h2 {
     text-align: center;
     color: white;
     font-size: 25px;
+    text-decoration-line: underline;
 }
 
 h3 {
     text-align: center;
     color: white;
+    font-weight: bolder;
 
 }
 
 p{
-    text-align: justify;
     text-align: center;
     color: white;
     margin-left: 140px;
