--- a/style/styleStudium.css
+++ b/style/styleStudium.css
@@ -16,12 +16,14 @@ h2 {
 h3 {
     text-align: center;
     color: white;
+    font-size: 25px;
 
 }
 
 h4 {
     text-align: center;
     color: white;
+    font-size: 25px;
 }
 
 p{
