--- a/style/styleDienstleistungen.css
+++ b/style/styleDienstleistungen.css
@@ -1,5 +1,6 @@
 body{
     background-color: #0b2e50;
+    font-family:arial;
 }
 
 h1{
@@ -31,11 +32,20 @@ a{
     position: relative;
     margin:auto auto;
     width:350px;
-
+left:100px;
     bottom: 10px;
     border: none;
 }
 
+
+.dienstMitte{
+    text-align:center;
+    position: relative;
+    margin:auto auto;
+    right:90px;
+    width:650px;
+
+}
 .bild200 {
     height: 100px;
     width: 100px;
