--- a/style/styleFreiwilligedienste.css
+++ b/style/styleFreiwilligedienste.css
@@ -1,10 +1,12 @@
 body {
     background-color: #0b2e50;
+    font-family: Arial;
 }
 
 h1 {
     text-align: center;
     color: white;
+
 }
 
 h2 {
@@ -20,6 +22,11 @@ h3 {
     font-weight: bolder;
 
 }
+
+h3:hover {
+    font-size: 25px;
+}
+
 
 p{
     text-align: center;
