--- a/style/styleWeiterbildung.css
+++ b/style/styleWeiterbildung.css
@@ -1,5 +1,6 @@
 body {
     background-color: #0b2e50;
+    font-family: Arial;
 }
 
 h1 {
@@ -22,14 +23,26 @@ h2 {
     font-size: 25px;
 }
 
+h2:hover {
+    font-size: 30px;
+}
+
 h3 {
     text-align: center;
     color: white;
     font-size: 25px;
 }
 
+h3:hover {
+    font-size: 30px;
+}
+
 h4 {
     text-align: center;
     color: white;
     font-size: 25px;
+}
+
+h4:hover {
+    font-size: 30px;
 }
