--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ p {
 }
 
 body {
-    background: #0b2e50;
+    background: #032B4F;
   text-align: center;
     alignment: center;
     font-family: Arial;
