--- a/style/styleEinungstest.css
+++ b/style/styleEinungstest.css
@@ -11,7 +11,7 @@ p {
 }
 
 body {
-    background: #0b2e50;
+    background: #032B4F;
     text-align: center;
     alignment: center;
     font-family: Arial;
